--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@
         <nav class="flex-1 px-4 space-y-1 overflow-y-auto custom-scrollbar pb-10">
 		<!-- SECCIÓN ADMINISTRACIÓN -->
 		<div id="nav-section-admin">
-			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-4">Administración</p>
+			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-4">
+				<span class="nav-text">Administración</span>
+			</p>
 			
 			<button onclick="switchView('dashboard')" id="nav-dashboard" class="nav-btn w-full nav-item active px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="layout-grid" class="w-4 h-4"></i> 
@@ -356,14 +358,16 @@
 				<span class="nav-text">Alumnos</span>
 			</button>
 
-			<!-- STAFF (Con alineación gap-3 para que no se desplace al colapsar) -->
+			<!-- STAFF (Corregido: gap-3 y nav-btn) -->
 			<div id="nav-section-staff" class="relative">
-				<button onclick="toggleSub('sub-staff')" class="nav-btn w-full flex items-center justify-between px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic transition-all group">
-					<div class="flex items-center gap-3">
+				<button onclick="toggleSub('sub-staff')" class="nav-btn w-full flex items-center justify-between px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic group">
+					<div class="flex items-center gap-3"> <!-- Gap-3 clave para la alineación -->
 						<i data-lucide="shield-check" class="w-4 h-4"></i> 
 						<span class="nav-text">Staff</span>
 					</div>
-					<i data-lucide="chevron-down" class="w-3 h-3 chevron-icon opacity-50 transition-transform"></i>
+					<span class="nav-text">
+						<i data-lucide="chevron-down" class="w-3 h-3 chevron-icon opacity-50"></i>
+					</span>
 				</button>
 				<div id="sub-staff" class="hidden pl-12 space-y-3 pb-4 mt-1">
 					<button onclick="switchView('profesores')" id="nav-profesores" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Profesores</button>
@@ -374,15 +378,19 @@
 
 		<!-- SECCIÓN OPERATIVA -->
 		<div id="nav-section-operativa">
-			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">Operativa</p>
+			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">
+				<span class="nav-text">Operativa</span>
+			</p>
 			
 			<div class="relative">
-				<button id="btn-facturacion" onclick="toggleSub('sub-facturacion')" class="nav-btn w-full flex items-center justify-between px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic transition-all group">
+				<button id="btn-facturacion" onclick="toggleSub('sub-facturacion')" class="nav-btn w-full flex items-center justify-between px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic group">
 					<div class="flex items-center gap-3">
 						<i data-lucide="wallet" class="w-4 h-4"></i> 
 						<span class="nav-text">Facturación</span>
 					</div>
-					<i data-lucide="chevron-down" class="w-3 h-3 chevron-icon opacity-50 transition-transform"></i>
+					<span class="nav-text">
+						<i data-lucide="chevron-down" class="w-3 h-3 chevron-icon opacity-50"></i>
+					</span>
 				</button>
 				<div id="sub-facturacion" class="hidden pl-12 space-y-3 pb-4 mt-1">
 					<button onclick="switchView('cobrar')" id="nav-cobrar" class="block w-full text-left text-[10px] font-black uppercase text-gray-500 hover:text-red-600 transition-colors tracking-widest">• Cobrar</button>
@@ -394,28 +402,28 @@
 
 		<!-- SECCIÓN GESTIÓN -->
 		<div id="nav-section-gestion">
-			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">Gestión</p>
-			
+			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">
+				<span class="nav-text">Gestión</span>
+			</p>
 			<button onclick="switchView('planes')" id="nav-planes" class="nav-btn w-full nav-item px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="clipboard-list" class="w-4 h-4"></i> <span class="nav-text">Planes</span>
 			</button>
-			
 			<button onclick="switchView('clases')" id="nav-clases" class="nav-btn w-full nav-item px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="presentation" class="w-4 h-4"></i> <span class="nav-text">Clases</span>
 			</button>
-			
 			<button onclick="switchView('calendario')" id="nav-calendario" class="nav-btn w-full nav-item px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="calendar" class="w-4 h-4"></i> <span class="nav-text">Calendario</span>
 			</button>
-			
 			<button id="nav-rutinas" onclick="switchView('rutinas')" class="nav-btn w-full nav-item px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="dumbbell" class="w-4 h-4"></i> <span class="nav-text">Rutinas Musc.</span>
 			</button>
 		</div>
 
-		<!-- SECCIÓN SEGURIDAD (Corregida con nav-section-title y gap-3) -->
+		<!-- SECCIÓN SEGURIDAD -->
 		<div id="nav-section-virtual">
-			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">Seguridad</p>
+			<p class="nav-section-title text-[10px] font-black text-gray-600 uppercase tracking-widest px-6 mb-2 mt-8">
+				<span class="nav-text">Seguridad</span>
+			</p>
 			<button onclick="switchView('acceso-virtual')" id="nav-acceso-virtual" class="nav-btn w-full nav-item px-6 py-4 rounded-2xl font-black uppercase text-[11px] italic flex items-center gap-3">
 				<i data-lucide="qr-code" class="w-4 h-4"></i> 
 				<span class="nav-text">Acceso Virtual</span>
