--- a/index.html
+++ b/index.html
@@ -321,9 +321,9 @@
             <h1 class="brand-text text-xl font-black italic uppercase leading-none">
                 VIKINGO<br><span class="viking-red text-xs tracking-[0.4em] font-bold">STRENGTH HUB</span>
             </h1>
-            <button onclick="toggleSidebar()" class="p-2 hover:bg-white/5 rounded-lg transition-colors ml-auto">
+            <!-- <button onclick="toggleSidebar()" class="p-2 hover:bg-white/5 rounded-lg transition-colors ml-auto">
                 <i data-lucide="menu" class="w-5 h-5 viking-red"></i>
-            </button>
+            </button> -->
         </div>
 
         <div class="px-6 mb-8">
