--- a/index.html
+++ b/index.html
@@ -83,17 +83,24 @@
             background: rgba(255, 255, 255, 0.02); border-radius: 24px; overflow: hidden;
             border: 1px solid rgba(255, 255, 255, 0.1);
         }
-        .cal-header { 
-            background: rgba(255,0,0,0.1); padding: 8px 4px; text-align: center; 
-            font-weight: 900; font-size: 8px; border-right: 1px solid rgba(255,255,255,0.2); 
-            text-transform: uppercase;
-        }
-        .cal-cell { 
-            border-right: 1px solid rgba(255,255,255,0.15); 
-            border-bottom: 1px solid rgba(255,255,255,0.15); 
-            min-height: 40px;
-            position: relative; 
-        }
+        /* Cabeceras de los días con letra más grande */
+		.cal-header { 
+			background: rgba(255,0,0,0.15); 
+			padding: 12px 4px; 
+			text-align: center; 
+			font-weight: 900; 
+			font-size: 13px; /* Antes era 8px */
+			border-right: 1px solid rgba(255,255,255,0.1); 
+			text-transform: uppercase;
+			letter-spacing: 1px;
+		}
+        /* Celdas más altas para que quepa el Profesor */
+		.cal-cell { 
+			border-right: 1px solid rgba(255,255,255,0.1); 
+			border-bottom: 1px solid rgba(255,255,255,0.1); 
+			min-height: 100px; /* Antes era 40px, ahora es el doble */
+			position: relative; 
+		}
         .cal-cell-closed {
             background: repeating-linear-gradient(45deg, rgba(255,255,255,0.02), rgba(255,255,255,0.02) 10px, rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px);
             opacity: 0.5;
@@ -129,21 +136,30 @@
             padding: 20px;
         }
 
-        .class-badge {
-            color: black; font-weight: 900;
-            padding: 2px; text-transform: uppercase; font-style: italic;
-            cursor: pointer;
-            display: flex; flex-direction: column; justify-content: center; align-items: center;
-            text-align: center; width: 100%;
-            border: 1px solid rgba(0,0,0,0.1);
-            box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-            transition: transform 0.2s;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: 10;
-            height: calc(200% + 1px);
-        }
+        /* El recuadro de la clase con diseño más "lindo" y redondeado */
+		.class-badge {
+			color: black; 
+			font-weight: 900;
+			padding: 6px; 
+			text-transform: uppercase; 
+			font-style: italic;
+			cursor: pointer;
+			display: flex; 
+			flex-direction: column; 
+			justify-content: center; 
+			align-items: center;
+			text-align: center; 
+			width: calc(100% - 4px);
+			margin: 2px;
+			border-radius: 15px; /* Bordes más redondeados */
+			border: 1px solid rgba(255,255,255,0.2);
+			box-shadow: 0 4px 10px rgba(0,0,0,0.3), inset 0 0 10px rgba(255,255,255,0.2);
+			transition: all 0.2s;
+			position: absolute;
+			top: 0; left: 0; z-index: 10;
+			height: calc(100% - 4px);
+		}
+
         .class-badge:hover { transform: scale(0.97); z-index: 20; }
 
         .filter-btn {
@@ -1592,15 +1608,23 @@
 						}
 
 						badge.innerHTML = `
-							<div class="flex flex-col items-center justify-center h-full w-full">
-								<span class="text-[8px] sm:text-[9px] mb-0.5 leading-none font-black uppercase italic tracking-tighter text-black/90">
-									${c.nombre}
-								</span>
-								<div class="bg-black/30 px-1.5 rounded-full text-[7px] font-black ${estaLleno ? 'text-red-400 animate-pulse' : 'text-white/80'}">
-									${cupoActual}/${cupoMax}
-								</div>
+						<div class="flex flex-col items-center justify-center h-full w-full">
+							<!-- Título de la Clase más grande -->
+							<span class="text-[12px] leading-tight mb-1 font-black uppercase italic tracking-tighter text-black">
+								${c.nombre}
+							</span>
+							
+							<!-- Nombre del Profesor (NUEVO) -->
+							<span class="text-[9px] font-bold text-black/70 mb-2 lowercase italic">
+								${slot.coach || 'Staff'}
+							</span>
+
+							<!-- Cupo con fondo oscuro para resaltar -->
+							<div class="bg-black/20 px-2 py-0.5 rounded-full text-[8px] font-black ${estaLleno ? 'text-red-700 animate-pulse' : 'text-black/60'}">
+								${cupoActual}/${cupoMax}
 							</div>
-						`;
+						</div>
+					`;
 						
 						badge.onclick = (e) => {
 							e.stopPropagation();
