--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		.cal-cell { 
 			border-right: 1px solid rgba(255,255,255,0.1); 
 			border-bottom: 1px solid rgba(255,255,255,0.1); 
-			min-height: 100px; /* Antes era 40px, ahora es el doble */
+			height: 50px; /* La mitad de lo anterior */
 			position: relative; 
 		}
         .cal-cell-closed {
@@ -140,7 +140,7 @@
 		.class-badge {
 			color: black; 
 			font-weight: 900;
-			padding: 6px; 
+			padding: 4px; 
 			text-transform: uppercase; 
 			font-style: italic;
 			cursor: pointer;
@@ -149,15 +149,21 @@
 			justify-content: center; 
 			align-items: center;
 			text-align: center; 
+			
+			/* MAGIA: Ocupa el 200% de la celda + 1px del borde */
+			height: calc(200% + 1px); 
 			width: calc(100% - 4px);
 			margin: 2px;
-			border-radius: 15px; /* Bordes más redondeados */
-			border: 1px solid rgba(255,255,255,0.2);
-			box-shadow: 0 4px 10px rgba(0,0,0,0.3), inset 0 0 10px rgba(255,255,255,0.2);
-			transition: all 0.2s;
+			
+			border-radius: 14px; /* Un poco menos para que encaje mejor */
+			border: 1px solid rgba(255,255,255,0.3);
+			box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+			
 			position: absolute;
-			top: 0; left: 0; z-index: 10;
-			height: calc(100% - 4px);
+			top: 0; 
+			left: 0; 
+			z-index: 20; /* Por encima de las líneas */
+			transition: all 0.2s;
 		}
 
         .class-badge:hover { transform: scale(0.97); z-index: 20; }
@@ -1608,23 +1614,23 @@
 						}
 
 						badge.innerHTML = `
-						<div class="flex flex-col items-center justify-center h-full w-full">
-							<!-- Título de la Clase más grande -->
-							<span class="text-[12px] leading-tight mb-1 font-black uppercase italic tracking-tighter text-black">
+						<div class="flex flex-col items-center justify-center h-full w-full px-1">
+							<!-- Título de la Clase -->
+							<span class="text-[11px] leading-none mb-1 font-black uppercase italic text-black">
 								${c.nombre}
 							</span>
 							
-							<!-- Nombre del Profesor (NUEVO) -->
-							<span class="text-[9px] font-bold text-black/70 mb-2 lowercase italic">
-								${slot.coach || 'Staff'}
+							<!-- Profesor -->
+							<span class="text-[9px] font-extrabold text-black/80 mb-1 lowercase italic leading-none">
+								${slot.coach || 'staff'}
 							</span>
 
-							<!-- Cupo con fondo oscuro para resaltar -->
-							<div class="bg-black/20 px-2 py-0.5 rounded-full text-[8px] font-black ${estaLleno ? 'text-red-700 animate-pulse' : 'text-black/60'}">
-								${cupoActual}/${cupoMax}
+							<!-- Cupo con cápsula -->
+							<div class="bg-black/15 px-2 py-0.5 rounded-full text-[8px] font-black text-black/60">
+								0/${c.capacidad_max}
 							</div>
 						</div>
-					`;
+						`;
 						
 						badge.onclick = (e) => {
 							e.stopPropagation();
