--- a/index.html
+++ b/index.html
@@ -2994,30 +2994,45 @@ async function renderRutinas() {
 	}
 
 	async function loadCaja() {
-		// A. Obtener movimientos
 		const movs = await apiFetch('/caja/movimientos');
 		
-		// B. RECALCULAR TOTALES (Lógica corregida: Todo es ingreso salvo que diga Gasto/Egreso)
 		let calcIngresos = 0;
 		let calcGastos = 0;
 
+		// 1. Encabezados Forzados (Flujo | Tipo | Descripcion | Monto)
+		const thead = document.querySelector('#view-caja table thead tr');
+		if(thead) {
+			thead.innerHTML = `
+				<th class="pb-5 pl-2 text-left">Flujo</th>
+				<th class="pb-5 text-left">Tipo</th>
+				<th class="pb-5 text-left">Descripción</th>
+				<th class="pb-5 text-right pr-2">Monto</th>
+			`;
+		}
+
 		if (Array.isArray(movs)) {
 			movs.forEach(m => {
-				// Normalizamos para comparar sin importar mayúsculas
 				const tipo = (m.tipo || '').toLowerCase();
-				const esEgreso = tipo === 'gasto' || tipo === 'egreso';
+				const desc = (m.descripcion || '').toLowerCase();
+				const monto = Math.abs(parseFloat(m.monto)); // Leemos siempre positivo para calcular
+
+				// LÓGICA BLINDADA: 
+				// Si dice mercaderia, plan, venta o cobro -> ES INGRESO (Verde)
+				// Solo es Gasto si NO es lo anterior y explícitamente dice gasto/egreso
+				const esPositivo = tipo.includes('mercaderia') || tipo.includes('mercadería') || tipo.includes('plan') || tipo.includes('venta') || tipo.includes('cobro') || tipo.includes('ingreso');
+				const esEgreso = !esPositivo && (tipo === 'gasto' || tipo === 'egreso' || tipo === 'salida');
 
 				if (esEgreso) {
-					calcGastos += parseFloat(m.monto);
+					calcGastos += monto;
 				} else {
-					// Si es Plan, Mercadería, Venta, Ingreso, etc. -> SUMA
-					calcIngresos += parseFloat(m.monto);
+					calcIngresos += monto;
 				}
 			});
 		}
+
 		const calcBalance = calcIngresos - calcGastos;
 
-		// C. Actualizar las tarjetas del Dashboard
+		// Actualizar tarjetas
 		if(document.getElementById('caja-ingresos')) 
 			document.getElementById('caja-ingresos').innerText = `$ ${calcIngresos.toLocaleString()}`;
 		
@@ -3030,56 +3045,42 @@ async function renderRutinas() {
 			elBalance.className = `text-3xl font-black ${calcBalance >= 0 ? 'text-white' : 'text-red-500'}`;
 		}
 
-		// D. Renderizar la Tabla con las COLUMNAS SOLICITADAS: Flujo | Tipo | Descripción | Monto
+		// Renderizar Tabla
 		const table = document.getElementById('table-caja');
-		
-		// TRUCO: Inyectamos los encabezados correctos por JS para no obligarte a cambiar el HTML a mano
-		const thead = document.querySelector('#view-caja table thead tr');
-		if(thead) {
-			thead.innerHTML = `
-				<th class="pb-5 pl-2">Flujo</th>
-				<th class="pb-5">Tipo</th>
-				<th class="pb-5">Descripción</th>
-				<th class="pb-5 text-right pr-2">Monto</th>
-			`;
-		}
-		
 		if(table) {
 			if(Array.isArray(movs) && movs.length > 0) {
 				table.innerHTML = movs.map(m => {
-					// 1. Determinar si es Ingreso o Egreso (Visualmente)
 					const tipoRaw = (m.tipo || '').toLowerCase();
-					const esEgreso = tipoRaw === 'gasto' || tipoRaw === 'egreso';
+					const monto = Math.abs(parseFloat(m.monto));
+
+					// Misma lógica de detección visual
+					const esPositivo = tipoRaw.includes('mercaderia') || tipoRaw.includes('mercadería') || tipoRaw.includes('plan') || tipoRaw.includes('venta') || tipoRaw.includes('cobro') || tipoRaw.includes('ingreso');
+					const esEgreso = !esPositivo && (tipoRaw === 'gasto' || tipoRaw === 'egreso' || tipoRaw === 'salida');
 					
-					// Configuración Visual del Flujo
 					const flujoTexto = esEgreso ? 'EGRESO' : 'INGRESO';
 					const flujoColor = esEgreso 
 						? 'bg-red-500/10 text-red-500 border-red-500/20' 
 						: 'bg-green-500/10 text-green-500 border-green-500/20';
 
-					// 2. Determinar la Categoría (Columna "Tipo")
-					// Si el tipo guardado es "Ingreso" generico, tratamos de adivinar, sino usamos el tipo guardado (Plan, Mercaderia)
-					let categoriaReal = m.tipo;
-					if (tipoRaw === 'ingreso' || tipoRaw === 'egreso' || tipoRaw === 'gasto') {
-						 // Si es genérico, intentamos deducir por descripción
-						 if(m.descripcion.toLowerCase().includes('plan')) categoriaReal = 'Membresía';
-						 else if(m.descripcion.toLowerCase().includes('venta')) categoriaReal = 'Venta Mostrador';
-						 else categoriaReal = 'Varios';
-					}
+					// Icono según tipo real
+					let icono = 'tag';
+					if(tipoRaw.includes('plan')) icono = 'users';
+					if(tipoRaw.includes('mercaderia')) icono = 'shopping-bag';
+					if(esEgreso) icono = 'arrow-down-circle';
 
 					return `
 					<tr class="viking-table-row border-b border-white/5 hover:bg-white/5 transition-colors">
-						<!-- COL 1: FLUJO (Verde/Rojo) -->
+						<!-- COL 1: FLUJO -->
 						<td class="py-4 px-2">
 							<span class="px-3 py-1 rounded border text-[9px] font-black uppercase tracking-wider ${flujoColor}">
 								${flujoTexto}
 							</span>
 						</td>
 
-						<!-- COL 2: TIPO (Plan, Mercadería, Varios) -->
+						<!-- COL 2: TIPO -->
 						<td class="py-4 px-2">
 							<span class="text-white text-[10px] font-black uppercase italic opacity-70">
-								<i data-lucide="tag" class="w-3 h-3 inline mr-1 opacity-50"></i>${categoriaReal}
+								<i data-lucide="${icono}" class="w-3 h-3 inline mr-1 opacity-50"></i>${m.tipo}
 							</span>
 						</td>
 
@@ -3091,7 +3092,7 @@ async function renderRutinas() {
 
 						<!-- COL 4: MONTO -->
 						<td class="py-4 px-2 text-right font-black italic text-white tracking-wide pr-2">
-							$ ${parseFloat(m.monto).toLocaleString()}
+							$ ${monto.toLocaleString()}
 						</td>
 					</tr>
 				`}).join('');
