--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,9 @@
 					<button onclick="simularAcceso()" class="viking-bg-red text-black px-6 py-3 rounded-xl font-black uppercase italic text-[11px] shadow-lg hover:scale-105 transition-transform flex items-center gap-2">
 						<i data-lucide="refresh-cw" class="w-4 h-4"></i> Simular Ingreso
 					</button>
+					<button onclick="startScanner()" class="viking-bg-red text-black px-6 py-3 rounded-xl font-black uppercase italic text-[11px] shadow-lg hover:scale-105 transition-transform flex items-center gap-2">
+						<i data-lucide="camera" class="w-4 h-4"></i> Abrir Ojos de Odín
+					</button>
 				</div>
 
 				<div class="glass-card p-6 rounded-[2.5rem] border-white/5">
