--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
-    <title>Vikingo Strength Hub - Peak Fit</title>
+    <title>GF Strength Hub</title>
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -332,7 +332,7 @@
             <div class="w-32 h-32 mx-auto mb-8 logo-viking-glow bg-black rounded-full flex items-center justify-center overflow-hidden">
                 <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Vikingo Logo" class="w-full h-full object-cover" onerror="this.src='https://via.placeholder.com/150/FF0000/000000?text=VIKINGO'">
             </div>
-            <h1 class="text-4xl font-black italic uppercase mb-2">Vikingo <span class="viking-red">Hub</span></h1>
+            <h1 class="text-4xl font-black italic uppercase mb-2">GF <span class="viking-red">Hub</span></h1>
             <p class="text-[11px] tracking-[0.5em] text-gray-500 uppercase mb-10">Acceso al Sistema</p>
             
             <form onsubmit="handleLogin(event)" class="space-y-4">
@@ -348,7 +348,7 @@
         <div class="p-8 flex items-center gap-4">
             <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Vikingo Hub" class="w-10 h-10 object-contain logo-viking-glow brand-text" onerror="this.style.display='none'">
             <h1 class="brand-text text-xl font-black italic uppercase leading-none">
-                VIKINGO<br><span class="viking-red text-xs tracking-[0.4em] font-bold">STRENGTH HUB</span>
+                GF<br><span class="viking-red text-xs tracking-[0.4em] font-bold">STRENGTH HUB</span>
             </h1>
             <!-- <button onclick="toggleSidebar()" class="p-2 hover:bg-white/5 rounded-lg transition-colors ml-auto">
                 <i data-lucide="menu" class="w-5 h-5 viking-red"></i>
@@ -470,7 +470,7 @@
     <main id="main-content" class="flex-1 h-full overflow-y-auto hidden relative">
         <header class="h-24 border-b border-white/5 px-12 flex items-center justify-between sticky top-0 bg-black/70 backdrop-blur-2xl z-40">
             <div>
-                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">Vikingo Strength Hub</p>
+                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">GF Strength Hub</p>
                 <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter">Dashboard</h2>
             </div>
             <div class="flex items-center gap-6">
