--- a/index.html
+++ b/index.html
@@ -4967,6 +4967,16 @@ async function loadProfesores() {
 					}
 				}
 
+				async function generateVikingHash(dni) {
+					const message = dni + SECRET_KEY;
+					const encoder = new TextEncoder();
+					const data = encoder.encode(message);
+					const hashBuffer = await crypto.subtle.digest('SHA-256', data);
+					const hashArray = Array.from(new Uint8Array(hashBuffer));
+					return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
+				}
+
+
 			// ==========================================
 			// NUEVA LÓGICA DE ALUMNOS (FIX PANTALLA VACÍA)
 			// ==========================================
